@@ -37,6 +37,11 @@ What's new in Sudo 1.8.17
    "visudo -x".  This was never required by the standard and not
    escaping them improves readability of the output.
 
+ * Sudo no longer treats PAM_SESSION_ERR as a fatal error when
+   opening the PAM session.  Other errors from pam_open_session()
+   are still treated as fatal.  This avoids the "policy plugin
+   failed session initialization" error message seen on some systems.
+
 What's new in Sudo 1.8.16
 
  * Fixed a compilation error on Solaris 10 with Stun Studio 12.
